// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdnylx cJLcUI sinoui-typography sinoui-typography--caption"
  color="textPrimary"
  type="caption"
>
  Caption
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdnylx cJLcUI sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </h2>,
  <p
    className="sc-bdnylx cDzLHg sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx OpYZt sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx gytULs sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdnylx cJLcUI sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx eIoAGf sinoui-typography sinoui-typography--caption"
    color="primary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx xSQck sinoui-typography sinoui-typography--caption"
    color="secondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx cJLcUI sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx evgsWJ sinoui-typography sinoui-typography--caption"
    color="textSecondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx cPrkjF sinoui-typography sinoui-typography--caption"
    color="error"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx fHMSEQ sinoui-typography sinoui-typography--caption"
    color="warning"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx gytULs sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-bdnylx ghESwI sinoui-typography sinoui-typography--caption"
    color="info"
    type="caption"
  >
    Caption
  </p>,
]
`;
